--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,22 +8,25 @@
 	<script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
 </head>
 <body>
-	<header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
-	{{{body}}}
-	
-	{{#if showTests}}
-			<div id="mocha"></div>
-			<script src="/vendor/mocha.js"></script>
-			<script src="/vendor/chai.js"></script>
-			<script>
-				mocha.ui('tdd');
-				var assert = chai.assert;
-			</script>
-			<script src="/qa/tests-gloal.js"></script>
-			{{#if pageTestScript}}
-				<script src="{{pageTestScript}}"></script>
-			{{/if}}
-			<script>mocha.run();</script>
-	{{/if}}
+	<div class="container">
+		<header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
+		{{{body}}}
+		
+		{{#if showTests}}
+				<div id="mocha"></div>
+				<script src="/vendor/mocha.js"></script>
+				<script src="/vendor/chai.js"></script>
+				<script>
+					mocha.ui('tdd');
+					var assert = chai.assert;
+				</script>
+				<script src="/qa/tests-gloal.js"></script>
+				{{#if pageTestScript}}
+					<script src="{{pageTestScript}}"></script>
+				{{/if}}
+				<script>mocha.run();</script>
+		{{/if}}
+		<footer>&copy; {{copyrightYear}} Meadowlark Travel</footer>
+	</div>
 </body>
 </html>
