--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -2,4 +2,6 @@
 
 <p>Your fortune for the day:</p>
 <blockquote>{{fortune}}</blockquote>
-<p>Contact <a href="/contact">Here</a></p>
+
+<p>Please feel free to <a href="/contact">contact us</a>
+with any questions or comments.</p>
